# example-corba

./: CMakeLists.txt  README.md  pom.xml
src/main/cxx/: client.cpp  server.cpp
src/main/idl/: HelloApp.idl
src/main/java/com/example/corba/: Client.java  Server.java
